--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="flappybird.css">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3494326893444566"
      crossorigin="anonymous"></script>
+        <meta name="google-site-verification" content="9m1msXTnM2G-dFOcgc0I6J4iV4lfIs044R6WPz3hhJg" />
         <script src="flappybird.js" defer></script>
         <script src="leaderboard.js" defer></script>
         <style>
